syntax = "proto3";

option go_package = "protobufs/";

service Consensus {
  rpc RequestAccess (AccessRequest) returns (AccessResponse);
}

message AccessRequest {
  int32 nodeID = 1;
   int32 timestamp = 2;
}

message AccessResponse {
  int32 nodeID = 1;
  int32 timestamp = 2;
  bool access = 3;
}
